projet_gl/src/test/deca/context/valid/3_43/3_43_This.deca
// Description:
//    Programme minimaliste faisant un This
//
// Resultats:
//
// Historique:
//    cree le 17/01/2024

class A {
    int x;
    int method(){
        this.x = 1;
    }
}
