projet_gl/src/test/deca/context/invalid/3_70/3_70_1_Field_ident.deca
// Description:
//    Problème de type retourné par identifier qui doit être un field
//
// Resultats:
//    Ligne 17: Type error: should be a field
//
// Historique:
//    cree le 19/01/2024

class A {
    int x;
    int method(){}
}

{
    A a = new A();
    a.method;    
}